--- a/src/services/catalog/settings.json
+++ b/src/services/catalog/settings.json
@@ -3,5 +3,15 @@
         "host": "0.0.0.0",
         "port": 8080
     },
-    "indent_level": 4
+    "indent_level": 4,
+    "mqttbrokers": [
+        {
+            "host": "test.mosquitto.org",
+            "port": 1883
+        }
+    ],
+    "watchdog": {
+        "timeout_ms": 500,
+        "expire_sec": 10
+    }
 }
