--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,9 +30,11 @@ jobs:
         working-directory: src
         run: docker-compose up -d
       - name: docker-compose ps
+        working-directory: src
         run: |
           docker-compose ps
       - name: docker-compose logs
+        working-directory: src
         run: |
           docker-compose logs
       - name: Check catalog
