--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -37,6 +37,9 @@ jobs:
         working-directory: src
         run: |
           docker-compose logs
+      - name: Sleep for 5 seconds
+        run: sleep 5s
+        shell: bash
       - name: Check catalog
         uses: jtalk/url-health-check-action@v2
         with:
@@ -49,4 +52,4 @@ jobs:
           # Delay between retries
           retry-delay: 5s # Optional, only applicable to max-attempts > 1
           # Retry all errors, including 404. This option might trigger curl upgrade.
-          retry-all: false # Optional, defaults to "false"
+          retry-all: true # Optional, defaults to "false"
