--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,7 +25,13 @@ jobs:
         # Put an example of mandatory inputs here
         with:
           PROJECT_PATH: src/services/catalog   #default is the root of the repository
-          REQUIREMENT_PATH: src/services/catalog/requirements.txt  #default is requirement.txt in the root of your repository 
+          REQUIREMENT_PATH: src/services/catalog/requirements.txt  #default is requirement.txt in the root of your repository
+      - name: PIPREQS calculator
+        uses: ryan-rozario/pipreqs-action-cpy@master
+        # Put an example of mandatory inputs here
+        with:
+          PROJECT_PATH: src/services/calculator   #default is the root of the repository
+          REQUIREMENT_PATH: src/services/calculator/requirements.txt  #default is requirement.txt in the root of your repository 
       - name: Build the services
         working-directory: src
         run: docker-compose up -d
