--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - github-workflow
 jobs:
-  test-catalog:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
