fixed service files thingspeakadaptor

--- a/src/services/thingspeakadaptor/Dockerfile
+++ b/src/services/thingspeakadaptor/Dockerfile
@@ -1,12 +1,12 @@
 FROM python:3
 
 COPY common/requirements.txt /app/common/requirements.txt
-COPY services/example/requirements.txt /app/services/example/requirements.txt
+COPY services/thingspeakadaptor/requirements.txt /app/services/thingspeakadaptor/requirements.txt
 RUN pip3 install -r /app/common/requirements.txt
-RUN pip3 install -r /app/services/example/requirements.txt
+RUN pip3 install -r /app/services/thingspeakadaptor/requirements.txt
 
 COPY . /app
-WORKDIR /app/services/example
+WORKDIR /app/services/thingspeakadaptor
 
 # RUN pip install pipreqs
 # RUN pipreqs 
