Fixed telegram Dockerfile

--- a/src/services/telegram/Dockerfile
+++ b/src/services/telegram/Dockerfile
@@ -1,12 +1,12 @@
 FROM python:3
 
 COPY common/requirements.txt /app/common/requirements.txt
-COPY services/calculator/requirements.txt /app/services/calculator/requirements.txt
+COPY services/telegram/requirements.txt /app/services/telegram/requirements.txt
 RUN pip3 install -r /app/common/requirements.txt
-RUN pip3 install -r /app/services/calculator/requirements.txt
+RUN pip3 install -r /app/services/telegram/requirements.txt
 
 COPY . /app
-WORKDIR /app/services/calculator
+WORKDIR /app/services/telegram
 
 # RUN pip install pipreqs
 # RUN pipreqs 
