Added temperaturewrite method

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -72,4 +72,5 @@ services:
       timeout: 2s
       retries: 5
     environment:
-      - THINGSPEAKAPIKEY=${THINGSPEAKAPIKEY}
+      - THINGSPEAKAPIKEYTEMPERATUREWRITE=${THINGSPEAKAPIKEYTEMPERATUREWRITE}
+      - THINGSPEAKAPIKEYTEMPERATUREREAD=${THINGSPEAKAPIKEYTEMPERATUREREAD}
