Added read temperature and humidity. To fix return type of temperatureread and humidityread

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -74,3 +74,7 @@ services:
     environment:
       - THINGSPEAKAPIKEYTEMPERATUREWRITE=${THINGSPEAKAPIKEYTEMPERATUREWRITE}
       - THINGSPEAKAPIKEYTEMPERATUREREAD=${THINGSPEAKAPIKEYTEMPERATUREREAD}
+      - THINGSPEAKAPIKEYHUMIDITYWRITE=${THINGSPEAKAPIKEYHUMIDITYWRITE}
+      - THINGSPEAKAPIKEYHUMIDITYREAD=${THINGSPEAKAPIKEYHUMIDITYREAD}
+      - CHANNELIDTEMPERATURE=${CHANNELIDTEMPERATURE}
+      - CHANNELIDHUMIDITY=${CHANNELIDHUMIDITY}
