Fixed Makefile for empty dirs

--- a/src/services/Makefile
+++ b/src/services/Makefile
@@ -3,6 +3,8 @@
 genreq:
 	@for a in $$(ls); do \
         if [ -d $$a ]; then \
-            $(MAKE) -C $$a genreq; \
+            if [ -f $$a/Makefile ]; then\
+                $(MAKE) -C $$a genreq; \
+            fi \
         fi; \
     done;
