--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -9,7 +9,6 @@ services:
       timeout: 2s
       retries: 5
 
-
   catalog:
     build: 
       context: ./
@@ -23,7 +22,6 @@ services:
       timeout: 2s
       retries: 5
 
-
   calculator:
     build: 
       context: ./
@@ -35,6 +33,18 @@ services:
           condition: service_started
     healthcheck:
       test: ["CMD-SHELL", "curl -f -Li catalog:8080/catalog/services/calculator | grep online | grep -c true"]
+      interval: 15s
+      timeout: 2s
+      retries: 5
+
+  arduinodevconn:
+    build: 
+      context: ./
+      dockerfile: ./services/arduinodevconn/Dockerfile
+    ports:
+      - "8086:8086"
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f -Li catalog:8080/catalog/services/arduinodevconn | grep online | grep -c true"]
       interval: 15s
       timeout: 2s
       retries: 5
