Inserted the flow

--- a/src/services/nodered/Dockerfile
+++ b/src/services/nodered/Dockerfile
@@ -1,12 +1,12 @@
 FROM python:3
 
 COPY common/requirements.txt /app/common/requirements.txt
-COPY services/openweatheradaptor/requirements.txt /app/services/openweatheradaptor/requirements.txt
+COPY services/nodered/requirements.txt /app/services/nodered/requirements.txt
 RUN pip3 install -r /app/common/requirements.txt
-RUN pip3 install -r /app/services/openweatheradaptor/requirements.txt
+RUN pip3 install -r /app/services/nodered/requirements.txt
 
 COPY . /app
-WORKDIR /app/services/openweatheradaptor
+WORKDIR /app/services/nodered
 
 # RUN pip install pipreqs
 # RUN pipreqs 
