Added mqtt support and fix thingspeak order of docker startup

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -69,7 +69,7 @@ services:
       retries: 5
     environment:
       - OPENWETHERMAPAPIKEY=${OPENWETHERMAPAPIKEY}
-      
+
   thingspeakadaptor:
     build: 
       context: ./
@@ -78,7 +78,9 @@ services:
       - "8083:8083"
     depends_on:
       catalog:
-          condition: service_started
+        condition: service_started
+      arduinodevconn:
+        condition: service_started
     healthcheck:
       test: ["CMD-SHELL", "curl -f -Li catalog:8080/catalog/services/thingspeakadaptor | grep online | grep -c true"]
       interval: 15s
