--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -111,3 +111,5 @@ services:
       interval: 15s
       timeout: 2s
       retries: 5
+    volumes:
+      - ${PWD}/services/deviceconfig/confs.json:/app/services/deviceconfig/confs.json:rw
