Working bot with password checking

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -44,6 +44,7 @@ services:
       dockerfile: ./services/telegram/Dockerfile
     ports:
       - "8085:8085"
+    hostname : "telegramadaptor"
     depends_on:
       catalog:
           condition: service_started
