--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -47,7 +47,26 @@ services:
       catalog:
           condition: service_started
     healthcheck:
-      test: ["CMD-SHELL", "curl -f -Li catalog:8080/catalog/services/arduinodevconn | grep online | grep -c true"]
+      test: ["CMD-SHELL", "curl -f -Li catalog:8080/catalog/services/arduinodevconn?devid=0 | grep online | grep -c true"]
+      interval: 15s
+      timeout: 2s
+      retries: 5
+    # devices:
+    #   - "/dev/i2c-1:/dev/i2c-1"  
+    environment:
+      - ONRASPBERRY=${ONRASPBERRY}
+
+  arduinodevconn2:
+    build: 
+      context: ./
+      dockerfile: ./services/arduinodevconn2/Dockerfile
+    ports:
+      - "8088:8088"
+    depends_on:
+      catalog:
+          condition: service_started
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f -Li catalog:8080/catalog/services/arduinodevconn?devid=1 | grep online | grep -c true"]
       interval: 15s
       timeout: 2s
       retries: 5
