--- a/src/services/telegram/settings.json
+++ b/src/services/telegram/settings.json
@@ -8,5 +8,20 @@
         "host": "catalog",
         "port": 8080,
         "ping_ms": 2000
+    },
+    "telegram": {
+        "poll_time": 0.5,
+        "commands": {
+            "commands": [
+                {"command": "help", "description": "Show the list of all available commands"},
+                {"command": "psw", "description": "Subscribe the user"},
+                {"command": "switch", "description": "Turn on or off the irrigator"},
+                {"command": "getairt", "description": "Retrieve temperature of the air"},
+                {"command": "getairu", "description": "Retrieve humidity of the air"},
+                {"command": "getsoilu", "description": "Retrieve humidity of the soil"},
+                {"command": "config", "description": "Sets the sampling period of the sensors"}
+            ],
+            "language_code": "en"
+        }
     }
 }
