--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -60,6 +60,7 @@ services:
     build: 
       context: ./
       dockerfile: ./services/raspberrydevconn/Dockerfile
+    privileged: true
     ports:
       - "8088:8088"
     depends_on:
@@ -73,10 +74,11 @@ services:
       timeout: 2s
       retries: 5
     devices:
-      - "/dev/i2c-1:/dev/i2c-1"  
+      - "/dev/i2c-1:/dev/i2c-1"
+      - "/dev/gpiomem:/dev/gpiomem"  
     environment:
       - ONRASPBERRY=${ONRASPBERRY}
-
+  
   openweatheradaptor:
     build: 
       context: ./
