--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -51,7 +51,7 @@ services:
       interval: 15s
       timeout: 2s
       retries: 5
-    devices:
+    #devices:
       # - "/dev/i2c-1:/dev/i2c-1"  
     environment:
       - ONRASPBERRY=${ONRASPBERRY}
