--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -73,7 +73,7 @@ services:
       interval: 15s
       timeout: 2s
       retries: 5
-    devices:
+    #devices:
       # - "/dev/i2c-1:/dev/i2c-1"
       # - "/dev/gpiomem:/dev/gpiomem"  
     environment:
