RaspiDevConn: new script for generating requirements due to Adafruit_DHT library incompatibility on non-raspberry systems

--- a/src/services/raspberrydevconn/Dockerfile
+++ b/src/services/raspberrydevconn/Dockerfile
@@ -2,8 +2,10 @@ FROM python:3
 
 COPY common/requirements.txt /app/common/requirements.txt
 COPY services/raspberrydevconn/requirements.txt /app/services/raspberrydevconn/requirements.txt
+COPY services/raspberrydevconn/requirements.txt /app/services/raspberrydevconn/requirements_rpi.txt
 RUN pip3 install -r /app/common/requirements.txt
 RUN pip3 install -r /app/services/raspberrydevconn/requirements.txt
+RUN pip3 install -r /app/services/raspberrydevconn/requirements_rpi.txt --install-option="--force-pi"
 
 COPY . /app
 WORKDIR /app/services/raspberrydevconn
