implemented position setting

--- a/src/services/telegram/settings.json
+++ b/src/services/telegram/settings.json
@@ -19,7 +19,8 @@
                 {"command": "getairt", "description": "Retrieve temperature of the air"},
                 {"command": "getairu", "description": "Retrieve humidity of the air"},
                 {"command": "getsoilu", "description": "Retrieve humidity of the soil"},
-                {"command": "config", "description": "Sets the sampling period of the sensors"}
+                {"command": "config", "description": "Sets the sampling period of the sensors"},
+                {"command": "pos","description":"Sets latitude and longitude where retrive weather forecasting"}
             ],
             "language_code": "en"
         }
