--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -55,6 +55,8 @@ services:
       retries: 5
     environment:
       - TELEGRAMAPAPIKEY=${TELEGRAMAPAPIKEY}
+    volumes:
+      - ${PWD}/services/telegram/data.json:/app/services/telegram/data.json:rw
 
   arduinodevconn:
     build: 
