--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -107,6 +107,8 @@ services:
         condition: service_started
       arduinodevconn:
         condition: service_started
+      raspberrydevconn:
+        condition: service_started
     healthcheck:
       test: ["CMD-SHELL", "curl -f -Li catalog:8080/catalog/services/thingspeakadaptor | grep online | grep -c true"]
       interval: 15s
