--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -51,8 +51,8 @@ services:
       interval: 15s
       timeout: 2s
       retries: 5
-    devices:
-      - "/dev/i2c-1:/dev/i2c-1"  
+    # devices:
+    #   - "/dev/i2c-1:/dev/i2c-1"  
     environment:
       - ONRASPBERRY=${ONRASPBERRY}
 
@@ -73,9 +73,9 @@ services:
       interval: 15s
       timeout: 2s
       retries: 5
-    devices:
-      - "/dev/i2c-1:/dev/i2c-1"
-      - "/dev/gpiomem:/dev/gpiomem"  
+    # devices:
+    #   - "/dev/i2c-1:/dev/i2c-1"
+    #   - "/dev/gpiomem:/dev/gpiomem"  
     environment:
       - ONRASPBERRY=${ONRASPBERRY}
   
