--- a/src/services/telegram/settings.json
+++ b/src/services/telegram/settings.json
@@ -13,14 +13,38 @@
         "poll_time": 0.5,
         "commands": {
             "commands": [
-                {"command": "help", "description": "Show the list of all available commands"},
-                {"command": "psw", "description": "Subscribe the user"},
-                {"command": "switch", "description": "Turn on or off the irrigator"},
-                {"command": "getairt", "description": "Retrieve temperature of the air"},
-                {"command": "getairu", "description": "Retrieve humidity of the air"},
-                {"command": "getsoilu", "description": "Retrieve humidity of the soil"},
-                {"command": "config", "description": "Sets the sampling period of the sensors"},
-                {"command": "pos","description":"Sets latitude and longitude where retrive weather forecasting"}
+                {
+                    "command": "help",
+                    "description": "Show the list of all available commands"
+                },
+                {
+                    "command": "psw",
+                    "description": "Subscribe the user"
+                },
+                {
+                    "command": "switch",
+                    "description": "Turn on or off the irrigator"
+                },
+                {
+                    "command": "getairt",
+                    "description": "Retrieve temperature of the air"
+                },
+                {
+                    "command": "getairu",
+                    "description": "Retrieve humidity of the air"
+                },
+                {
+                    "command": "getsoilu",
+                    "description": "Retrieve humidity of the soil"
+                },
+                {
+                    "command": "config",
+                    "description": "Sets the sampling period of the sensors"
+                },
+                {
+                    "command": "pos",
+                    "description": "Sets latitude and longitude where retrive weather forecasting"
+                }
             ],
             "language_code": "en"
         }
