--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -204,3 +204,17 @@ services:
       retries: 5
     volumes:
       - ${PWD}/services/deviceconfig/confs.json:/app/services/deviceconfig/confs.json:rw
+
+
+
+  wateringcontrol:
+    build: 
+      context: ./
+      dockerfile: ./services/wateringcontrol/Dockerfile
+    ports:
+      - "8089:8089"
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f -Li catalog:8080/catalog/services/deviceconfig | grep online | grep -c true"]
+      interval: 15s
+      timeout: 2s
+      retries: 5
