--- a/src/services/wateringcontrol/settings.json
+++ b/src/services/wateringcontrol/settings.json
@@ -1,7 +1,12 @@
 {
+    "catalog": {
+        "host": "catalog",
+        "port": 8080,
+        "ping_ms": 2000
+    },
     "rest_server": {
         "host": "0.0.0.0",
-        "port": 8089
+        "port": 8091
     },
     "indent_level": 4
 }
