Implemented command to set min/max value for watering control

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -72,8 +72,8 @@ services:
       interval: 15s
       timeout: 2s
       retries: 5
-    devices:
-      - "/dev/i2c-1:/dev/i2c-1"  
+#    devices:
+#      - "/dev/i2c-1:/dev/i2c-1"  
     environment:
       - ONRASPBERRY=${ONRASPBERRY}
 
@@ -91,8 +91,8 @@ services:
       interval: 15s
       timeout: 2s
       retries: 5
-    devices:
-      - "/dev/i2c-1:/dev/i2c-1"  
+#    devices:
+#      - "/dev/i2c-1:/dev/i2c-1"  
     environment:
       - ONRASPBERRY=${ONRASPBERRY}
 
@@ -113,9 +113,9 @@ services:
       interval: 15s
       timeout: 2s
       retries: 5
-    devices:
-      - "/dev/i2c-1:/dev/i2c-1"
-      - "/dev/gpiomem:/dev/gpiomem"  
+#    devices:
+#      - "/dev/i2c-1:/dev/i2c-1"
+#      - "/dev/gpiomem:/dev/gpiomem"  
     environment:
       - ONRASPBERRY=${ONRASPBERRY}
 
@@ -136,9 +136,9 @@ services:
       interval: 15s
       timeout: 2s
       retries: 5
-    devices:
-      - "/dev/i2c-1:/dev/i2c-1"
-      - "/dev/gpiomem:/dev/gpiomem"  
+#    devices:
+#      - "/dev/i2c-1:/dev/i2c-1"
+#      - "/dev/gpiomem:/dev/gpiomem"  
     environment:
       - ONRASPBERRY=${ONRASPBERRY}
   
