CatReq: fixed do_req method. TelMan: added better status message abut Watering Control

--- a/src/services/telegram/settings.json
+++ b/src/services/telegram/settings.json
@@ -39,7 +39,7 @@
                 },
                 {
                     "command": "config",
-                    "description": "Sets the sampling period of the sensors"
+                    "description": "Sets the sampling period of the sensors or the thresholds for watering"
                 },
                 {
                     "command": "pos",
