JsonManager: check on data type for the value that is being changed. CatalogRequet: reqRest now retries by defualt 3 times. Watering: fixed global enable/disable check

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -213,6 +213,9 @@ services:
       dockerfile: ./services/wateringcontrol/Dockerfile
     ports:
       - "8091:8091"
+    depends_on:
+      catalog:
+          condition: service_started
     healthcheck:
       test: ["CMD-SHELL", "curl -f -Li catalog:8080/catalog/services/wateringcontrol | grep online | grep -c true"]
       interval: 15s
