Watering: working on device Links and telegram support. Thingspeak: removed bug about consecutive publish on same channels but different ids in less then 15 seconds. Needs further opts

--- a/src/services/telegram/settings.json
+++ b/src/services/telegram/settings.json
@@ -38,6 +38,10 @@
                     "description": "Retrieve humidity of the soil"
                 },
                 {
+                    "command": "links",
+                    "description": "Retrieve all the device links"
+                },
+                {
                     "command": "config",
                     "description": "Sets the sampling period of the sensors or the thresholds for watering"
                 },
