WateringDatabase: added service and support for telegram. JSONManager: added support for modifying an entire subset if the structure is the same.

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -205,8 +205,6 @@ services:
     volumes:
       - ${PWD}/services/deviceconfig/confs.json:/app/services/deviceconfig/confs.json:rw
 
-
-
   wateringcontrol:
     build: 
       context: ./
@@ -221,3 +219,20 @@ services:
       interval: 15s
       timeout: 2s
       retries: 5
+
+  wateringdatabase:
+    build: 
+      context: ./
+      dockerfile: ./services/wateringdatabase/Dockerfile
+    ports:
+      - "8092:8092"
+    depends_on:
+      catalog:
+          condition: service_started
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f -Li catalog:8080/catalog/services/wateringdatabase | grep online | grep -c true"]
+      interval: 15s
+      timeout: 2s
+      retries: 5
+    volumes:
+      - ${PWD}/services/wateringdatabase/database.json:/app/services/wateringdatabase/database.json:rw
