Uptime: now uses a remote db file

--- a/src/services/uptime/Dockerfile
+++ b/src/services/uptime/Dockerfile
@@ -2,3 +2,5 @@ FROM louislam/uptime-kuma:latest
 
 RUN apt-get update
 RUN apt-get install -y curl
+
+ADD https://github.com/thegabriele97/WaterIoT/raw/wip_uptime/src/services/uptime/data/kuma.db /app/data
