--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -221,5 +221,5 @@ services:
       interval: 15s
       timeout: 2s
       retries: 5
-    volumes:
-      - ${PWD}/services/uptime/data:/app/data
+    # volumes:
+    #   - ${PWD}/services/uptime/data:/app/data
