--- a/src/services/uptime/Dockerfile
+++ b/src/services/uptime/Dockerfile
@@ -3,4 +3,4 @@ FROM louislam/uptime-kuma:latest
 RUN apt-get update
 RUN apt-get install -y curl
 
-ADD https://github.com/thegabriele97/WaterIoT/raw/wip_uptime/src/services/uptime/data/kuma.db /app/data
+COPY ./services/uptime/kuma.db /app/data/kuma.db
