--- a/src/services/nodered/Dockerfile
+++ b/src/services/nodered/Dockerfile
@@ -2,6 +2,7 @@ FROM nodered/node-red
   
 RUN npm install node-red-dashboard
 RUN npm install node-red-contrib-python3-function
+RUN npm install node-red-node-markdown
 
 COPY entrypoint.sh entrypoint.sh
 COPY flows.json flows.json
